.gitignore: adding files I didn't edit to the list

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,30 @@ wp-content/cache/
 wp-content/upgrade/
 wp-content/uploads/
 wp-content/wp-cache-config.php
+src/wp-admin/css/about.css
+src/wp-admin/css/admin-menu.css
+src/wp-admin/css/color-picker.css
+src/wp-admin/css/colors/
+src/wp-admin/css/common.css
+src/wp-admin/css/customize-controls.css
+src/wp-admin/css/customize-widgets.css
+src/wp-admin/css/dashboard.css
+src/wp-admin/css/deprecated-media.css
+src/wp-admin/css/farbtastic.css
+src/wp-admin/css/forms.css
+src/wp-admin/css/ie.css
+src/wp-admin/css/install.css
+src/wp-admin/css/l10n.css
+src/wp-admin/css/list-tables.css
+src/wp-admin/css/login.css
+src/wp-admin/css/media.css
+src/wp-admin/css/nav-menus.css
+src/wp-admin/css/press-this.css
+src/wp-admin/css/revisions.css
+src/wp-admin/css/themes.css
+src/wp-admin/css/widgets.css
+src/wp-admin/css/wp-admin.css
+src/wp-admin/images/
+src/wp-admin/js/
+src/wp-content/
+src/wp-includes/
